<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="support_lib_version">&current_match_version;</string>
    <string name="update_title">20200303 beta1</string>
    <string name="update_info">
    1.The module script will block enforced and can not shutdown selinux installation\n
    2.Added secure sequence, now it wont crash your audio system when the daemon is dead or the selinux enforced accidentally\n
    3.Float window(Requires ignore battery optimization and overlay permission)\n
    4.Fast Track can be rightly removed from the playing list now\n
    5.Main list optimization\n
    6.Paused tracks will not be removed now\n
    7.Preset panel reconstruction\n
    8.added customize option for float window\n
    9.added search for preset panel\n
    10.fixed overlap area
    11.other bug fix\n\n

        20200226 beta1\n
    1.Reconstructed code again!\n
    2.No need to modify rc\n
    3.Use binder based control\n
    4.Support Android 10 arm/arm64 now\n
    5.Full api to every supported system\n
    6.Fixed mute section bug\n
    7.Fixed bluetooth/wired earphone issues\n
    8.Fixed progress not saving issues\n
    9.Fixed preset issues\n
    10.Fixed status error\n
    11.added switch profile\n
    12.deleted useless functions\n
    13.adjusted layout\n
    14.Stability upgrade\n
    15.Fixed scrolling issues\n
    16.Added default profile setting\n
    17.Optimized sequence to solve the performance and battery issue\n
    18.Fixed memory leak risk\n
    19.Now may support MIUI(Still have some problem)\n
    20.Volume can be adjusted real time now\n
    21.Fixed preset widget issue\n
    22.Fixed native service null pointer dereference\n</string>
    <string name="app_name">AudioHQ</string>
    <string name="activity_pref">Preferences</string>
    <string name="main_menu_1">Settings</string>
    <string name="main_menu_2">About</string>
    <string name="main_menu_3">Start service</string>
    <string name="main_menu_4">Stop service</string>
    <string name="main_menu_5">Refresh</string>
    <string name="main_menu_6">Console output</string>
    <string name="main_report_bug">Please deliver the error to the address below</string>
    <string name="toast_no_root">No root, this program will not work</string>
    <string name="toast_implementing">Implementing</string>
    <string name="rc_modified_server_noneed">Built_in server running</string>
    <string name="service_toast_already_running">Service already running</string>
    <string name="service_toast_already_killed">Service has been killed</string>
    <string name="adjust_title">Precise Control</string>
    <string name="adjust_confirm">Apply</string>
    <string name="til_err_parse">Not a float number</string>
    <string name="til_err_ofr">Out of range</string>
    <string name="read_profile_err">Read profile error</string>
    <string name="java_server_running">Java Server Running</string>
    <string name="toast_copied">Copied</string>
    <string name="ad_pb">Yes</string>
    <string name="ad_nb">Cancel</string>
    <string name="ad_pb2">Yes</string>
    <string name="ad_pb_no_rc_modify">Install, but no modify to .rc files</string>
    <string name="ad_nb2">No</string>
    <string name="ad_nb3">Close</string>
    <string name="ad_nb4">Clear</string>
    <string name="ad_processing">Processing…</string>
    <string name="empty_view">Empty</string>
    <string name="check_root">Root</string>
    <string name="check_selinux">Selinux Status</string>
    <string name="check_support">If Api/Abi Supported</string>
    <string name="check_native_elf_info">Native version</string>
    <string name="check_native_lib_info">Lib version</string>
    <string name="check_audioserver_info">\'audioserver\' elf info </string>
    <string name="check_daemon_status">Daemon status</string>
    <string name="check_daemon_status_alive">Alive</string>
    <string name="check_daemon_status_dead">Dead</string>
    <string name="check_daemon_restart">Try restart daemon</string>
    <string name="aplc_split_control">Split control</string>
    <string name="aplc_precise_control">Precise control</string>
    <string name="aplc_left">L[0,1]</string>
    <string name="aplc_right">R[0,1]</string>
    <string name="aplc_general">General[0,1]</string>
    <string name="aplc_use_process_control">Use process control</string>
    <string name="preset_disabled">Preset function disabled</string>
    <string name="preset_disabled_define">This would not work when there are no server running or the
    built-in server is not enabled</string>
    <string name="preset_tutorial_title">Tutorial</string>
    <string name="preset_tutorial_content">Assume you want to set a process called io.alcatraz.audiohq:play
    (Attention!!!Process name does not equals to package name, you can try run \'ps\' command to find out),
    Then you type the full process name below and the parameter below, after everything is checked ,apply it(If you
        are  using weakkey mode you can use package name here),Finally, use it at your own risk, good luck</string>
    <string name="preset_process_name">Process name:</string>
    <string name="preset_list_sum">%d Packages</string>
    <string name="preset_list_notice">Notice: This page would not load the profile you have set</string>
    <string name="preset_loading">Loading…</string>
    <string name="preset_search_hint">App name/Package name</string>
    <string name="status_server">Native server</string>
    <string name="status_track_ctl_position">Track ctrl position</string>
    <string name="status_auto_remove_flag">Auto remove</string>
    <string name="status_thread_count">Existing threads</string>
    <string name="status_track_lock_ctl">Track control lock type</string>
    <string name="toast_cant_overlay">Can\'t do overlay, Pls grant permission</string>
    <string name="notification_overlay">AudioHQ Foreground</string>
    <string name="setup_step_next">Next</string>
    <string name="setup_step_next_final">Done</string>
    <string name="setup_step_before">Forward</string>
    <string name="setup_1_intro">Hello my friend, before you can start, let\'s take some minutes to complete the setup</string>
    <string name="setup_2_warning_vendor_system_title">Caution!</string>
    <string name="setup_2_warning_vendor_system_info">This software(the module) will try rebind some
    critical system libraries, it may cause you stuck at the boot animation and may make your audio system
    crash, make sure you know how to recover before you flash the module,Also please MAKE SURE YOUR SeLinux
    is PERMISSIVE or can be set to permissive, the module will try shut down SeLinux on booting, this software
    will not work</string>
    <string name="setup_2_warning_vendor_system_unlock">Understood and unlock</string>
    <string name="setup_2_requirements_not_meet_title">Requirements not meet</string>
    <string name="setup_2_requirements_not_meet_info">There are risks to proceed further installation.
    Next step has been locked, if you know what you are doing and know how to remove the module from recovery
    You can click unlock below</string>
    <string name="setup_2_warning_delay">Please read the warning carefully, this page will lock for 10s</string>
    <string name="setup_check_granted">Granted</string>
    <string name="setup_check_deny">Denied</string>
    <string name="setup_3_install_title">Installation</string>
    <string name="setup_3_install_info">Now, go to the website to download the module and install.
        This action may cause DAMAGE to your system, please make sure you know how to recover before you
    install the module</string>
    <string name="setup_3_install_page">Download</string>
    <string name="setup_3_installed">I have installed the matched module</string>
    <string name="setup_3_installed_title">Install Version</string>
    <string name="setup_3_installed_summary">Current apk supports native revision : &current_match_version;</string>
    <string name="setup_3_installed_detected">Detected : %s</string>
    <string name="setup_4_modify_rc_title">Modify audioserver.rc(requires reboot)</string>
    <string name="setup_4_modify_rc_info">Modify /system/etc/init/audioserver.rc,
        to enable built-in server,Attention:This would NOT work when /system is ro or .rc files are packaged in boot.img
        ,or the /system is ro(for /system ro, you can try write in recovery)</string>
    <string name="setup_4_modify_rc_already">Has modified</string>
    <string name="setup_4_modify_rc_not_yet">No modify done</string>
    <string name="setup_4_modify_rc_warning">This action requires reboot, proceed?</string>
    <string name="setup_6_done">Congratulation, now the installation process is completed</string>
    <string name="setup_current_update">Current Update</string>
    <string name="setup_selinux_check">SeLinux Check</string>
    <string name="setup_selinux_definition">Your SeLinux is required to be turned to permissive, the module will try \'setenforce 0\' on boot if it still shows Enforcing below,
    that means your kernel denied to turn it off</string>
    <string name="setup_permissions">Permissions</string>
    <string name="setup_permission_ignore_battery">Ignore battery optimization</string>
    <string name="setup_permission_overlay">System window overlay(You need to go Preference activity to enable)</string>
    <string name="setup_permission_request">Request</string>
    <string name="setup_permission_granted">Granted</string>
    <string name="pref_1_t">Background</string>
    <string name="pref_1_1">Service type</string>
    <string name="pref_1_2">Modify audioserver.rc(requires reboot)</string>
    <string name="pref_1_2_summary">Modify audioserver.rc to enable built-in server.
        This would NOT work when /system is ro or .rc files are packaged in boot.img</string>
    <string name="pref_1_3">Boot</string>
    <string name="pref_1_3_summary">Forced to start native daemon on boot</string>
    <string name="pref_1_4">Float Service</string>
    <string name="pref_1_4_summary">Run a service to show float window when the system volume is changed(grant ignore battery optimization pls)</string>
    <string name="pref_2_t">Security</string>
    <string name="pref_2_1">Unset progress default silenced</string>
    <string name="pref_2_1_summary">Process with no profile will be default silenced</string>
    <string name="pref_2_2">Pid Mode</string>
    <string name="pref_2_2_summary">Use pid as adjust indicator,use it when you don\t wnt to save settings
    or the proc read function does not work</string>
    <string name="pref_2_3">Default Profile</string>
    <string name="pref_2_3_summary">Set default volume when there are no profile</string>
    <string name="pref_2_4">Activate protector service</string>
    <string name="pref_2_4_summary">May be killed by some system, if you want to use this, grant ignore battery optimization pls</string>
    <string name="pref_3_t">Others</string>
    <string name="pref_3_1">Check update</string>
    <string name="pref_3_2">Clear profiles</string>
    <string name="pref_3_3">Uninstall native files</string>
    <string name="pref_3_4">Use package name as primary key</string>
    <string name="pref_3_4_summary">The layout and effect will be changed</string>
    <string name="pref_3_5">Show process with same package name in group</string>
    <string name="pref_3_5_summary">Beta</string>
    <string name="pref_4_t">Float window(Take effect after you exit this activity)</string>
    <string name="pref_4_1">Window layout gravity</string>
    <string name="pref_4_2">Background color</string>
    <string name="pref_4_3">Use foreground notification</string>
    <string name="pref_4_3_summary">This will create a foreground notification to keep float service alive</string>
    <string name="pref_4_4">Dismiss delay(ms)</string>
    <string name="adjust_default_value" tools:ignore="MissingTranslation">1.0</string>
</resources>