<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_1_t">
        <SwitchPreference
            android:defaultValue="true"
            android:enabled="false"
            android:key="boot"
            android:summary="@string/pref_1_3_summary"
            android:title="@string/pref_1_3" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_2_t">

        <CheckBoxPreference
            android:key="default_silent"
            android:summary="@string/pref_2_1_summary"
            android:title="@string/pref_2_1" />
        <PreferenceScreen
            android:key="default_profile"
            android:summary="@string/pref_2_3_summary"
            android:title="@string/pref_2_3" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_3_t">
        <PreferenceScreen
            android:key="check_update"
            android:title="@string/pref_3_1" />
        <PreferenceScreen
            android:key="clear_profiles"
            android:title="@string/pref_3_2" />
        <PreferenceScreen
            android:key="uninstall_native"
            android:title="@string/pref_3_3" />
    </PreferenceCategory>
</PreferenceScreen>
