<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/adjust_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adjust_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/aplc_general"
                android:text="@string/adjust_default_value" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <CheckBox
            android:id="@+id/aplc_split_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.2"
            android:text="@string/aplc_split_control" />

        <LinearLayout
            android:id="@+id/adjust_split_control_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/adjust_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="0dp">

                <EditText
                    android:text="@string/adjust_default_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/aplc_left" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/adjust_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="0dp">

                <EditText
                    android:text="@string/adjust_default_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/aplc_right" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/adjust_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/ad_nb" />

                <Button
                    android:id="@+id/adjust_apply"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/adjust_confirm" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adjust_button_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/adjust_processing"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginTop="6dp" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>