<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/preset_disabled_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:visibility="visible"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/preset_disabled_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    android:tint="@android:color/holo_red_light"
                    app:srcCompat="@drawable/ic_close" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/preset_disabled_indicator"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/preset_disabled"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preset_disabled_define" />

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:visibility="visible"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/preset_tutorial_title"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/preset_tutorial_content" />


                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:visibility="visible"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/main_menu_1"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/preset_process_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="30dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:ems="10"
                            android:hint="@string/preset_process_name" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/adjust_general"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="30dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789."
                            android:ems="10"
                            android:hint="@string/aplc_general"
                            android:text="@string/adjust_default_value" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <CheckBox
                        android:id="@+id/aplc_split_control"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.2"
                        android:text="@string/aplc_split_control" />

                    <LinearLayout
                        android:id="@+id/adjust_split_control_panel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/adjust_left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="30dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:ems="10"
                                android:hint="@string/aplc_left"
                                android:text="@string/adjust_default_value" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/adjust_right"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="30dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:ems="10"
                                android:hint="@string/aplc_right"
                                android:text="@string/adjust_default_value" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right|center"
                            android:orientation="horizontal"
                            android:paddingTop="10dp">

                            <Button
                                android:id="@+id/adjust_cancel"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/ad_nb" />

                            <Button
                                android:id="@+id/adjust_apply"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/adjust_confirm" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/adjust_button_cover"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:visibility="gone">

                            <ProgressBar
                                android:id="@+id/adjust_processing"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="26dp" />

                        </LinearLayout>

                    </FrameLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>