<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:visibility="visible"
        app:cardElevation="2dp"
        app:cardMaxElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/preset_list_indicaor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                    android:text="@string/preset_list_sum" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/preset_list_notice"
                    android:textAllCaps="false" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <SearchView
                android:id="@+id/preset_list_search"
                android:queryHint="@string/preset_search_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <ListView
                android:id="@+id/preset_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>